# Argus-Strategies-market

./: .gitignore  .pytest_output.txt  CHANGELOG.md  README.md
backend/: .env.example  clean_ai_db.py  pyproject.toml  pytest_result.txt  regenerate_out.txt  retry_ai.py  run_prosperity_ai.py  run_prosperity_newenergy.py  test_out.txt  test_result_v020.txt
backend/app/: main.py
backend/app/api/: stocks.py  strategies.py
backend/app/core/: config.py  logging.py  registry.py
backend/app/services/: data_fetcher.py  data_summarizer.py  qrv_agent.py  tushare_client.py  websearch_extractor.py
backend/app/strategies/prosperity/: __init__.py  api.py  coordinator.py  industry_history.py  models.py
backend/app/strategies/turtle/: __init__.py  api.py  cash_quality.py  coordinator.py  data_summarizer.py  penetration_return.py  qrv_agent.py  screener.py  turtle-coordinator.md  utils.py  websearch_extractor.py
backend/rules/prosperity/: scoring_weights.yaml  source_registry.yaml
backend/rules/prosperity/industry_profiles/: semiconductor.yaml
backend/rules/prosperity/prompts/: counter_cascade_prompt.md  counter_query_prompt.md  (+7 more)
backend/rules/v1/: turtle_cash_quality.yaml  turtle_pr.yaml  turtle_screener.yaml
backend/rules/v2/: industry_profiles.yaml  turtle_cash_quality.yaml  turtle_pr.yaml  turtle_qrv.yaml  turtle_screener.yaml
backend/tests/: conftest.py  test_cash_quality.py  test_data_summarizer.py  test_hypothesize_agent.py  test_penetration_return.py  test_prosperity_coordinator.py  test_screener.py  test_spec_compliance.py  test_websearch_extractor.py
(+240 files in other folders)
