[tool.poetry]
name = "investment-strategy-backend"
version = "0.8.4"
description = "投资策略分析网站后端 - 龟龟策略平台"
authors = ["harry"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.35"
alembic = "^1.13.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"
beautifulsoup4 = "^4.12.0"
pyyaml = "^6.0.2"
tushare = "^1.4.0"
akshare = "^1.14.0"
apscheduler = "^3.10.0"
structlog = "^24.4.0"
openai = "^1.55.0"
jinja2 = "^3.1.4"
aiohttp = "^3.12.0"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
